--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .App {
   min-height: 100vh;
-  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+  background-color: #ebedee;
 }
